<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <EditText
            android:id="@+id/etEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name_hint"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_date_hint"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:drawableEnd="@android:drawable/ic_menu_my_calendar"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etEventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_location_hint"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etAvailableSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/available_seats_hint"
            android:inputType="number"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description_hint"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:gravity="top"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnSaveEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_event_button" />

    </LinearLayout>
</ScrollView>